--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.1"
+    "react-native-screens": "^3.18.1",
+    "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
