--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-exit-app": "^1.1.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.1",
